feat: channel gallery creative review

--- a/src/app/modules/channels/v2/feed/feed.component.ng.scss
+++ b/src/app/modules/channels/v2/feed/feed.component.ng.scss
@@ -99,5 +99,12 @@
         }
       }
     }
+    &.m-channel__feed--grid {
+      ::ng-deep {
+        m-newsfeed__entity {
+          margin-bottom: 0px;
+        }
+      }
+    }
   }
 }
