--- a/src/app/modules/newsfeed/activity/nsfw-consent/nsfw-consent.component.scss
+++ b/src/app/modules/newsfeed/activity/nsfw-consent/nsfw-consent.component.scss
@@ -62,3 +62,9 @@ m-activity__nsfwConsent {
     flex-direction: column;
   }
 }
+
+.m-activity__nsfwConsent--minimalMode {
+  .m-activityNsfwConsent__button {
+    margin: 38px $activity-padding-lr--minimalMode;
+  }
+}
