--- a/src/app/modules/newsfeed/activity/owner-block/owner-block.component.html
+++ b/src/app/modules/newsfeed/activity/owner-block/owner-block.component.html
@@ -2,6 +2,12 @@
   <a [routerLink]="['/', username]">
     <img [src]="avatarUrl" class="m-border" />
   </a>
+  <div
+    *ngIf="minimalMode"
+    class="m-activityOwnerBlock__remindIcon--minimalMode"
+  >
+    <i class="material-icons">repeat</i>
+  </div>
 </div>
 
 <div class="m-activityOwnerBlock__body">
