--- a/src/app/modules/newsfeed/activity/paywall/paywall.component.html
+++ b/src/app/modules/newsfeed/activity/paywall/paywall.component.html
@@ -22,4 +22,5 @@
   (entityChange)="onEntityUpdated($event)"
   [mediaHeight]="mediaHeight"
   [showLegacyPaywall]="false"
+  [minimalMode]="service.displayOptions.minimalMode"
 ></m-wire--lock-screen>
