--- a/src/stylesheets/themes.scss
+++ b/src/stylesheets/themes.scss
@@ -96,6 +96,7 @@ $themes: (
     m-bgColor--secondary: #ffffff,
     m-bgColor--tertiary: #e3e4e9,
     m-bgColor--quaternary: #e3e4e9,
+    m-bgColor--quinary: #d8d8d8,
     m-borderColor--primary: #dce2e4,
     m-borderColor--secondary: #979797,
     m-borderColor--tertiary: #ececec,
@@ -168,6 +169,7 @@ $themes: (
     m-bgColor--secondary: #202527,
     m-bgColor--tertiary: #404e53,
     m-bgColor--quaternary: #323c3f,
+    m-bgColor--quinary: #d8d8d8,
     m-borderColor--primary: #404a4e,
     m-borderColor--secondary: #979797,
     m-borderColor--tertiary: #3a3f41,
@@ -302,6 +304,7 @@ $m-bgColor--primary: 'm-bgColor--primary';
 $m-bgColor--secondary: 'm-bgColor--secondary';
 $m-bgColor--tertiary: 'm-bgColor--tertiary';
 $m-bgColor--quaternary: 'm-bgColor--quaternary';
+$m-bgColor--quinary: 'm-bgColor--quinary';
 $m-borderColor--primary: 'm-borderColor--primary';
 $m-borderColor--secondary: 'm-borderColor--secondary';
 $m-borderColor--tertiary: 'm-borderColor--tertiary';
