--- a/src/app/common/components/paywall-badge/paywall-badge.component.ng.scss
+++ b/src/app/common/components/paywall-badge/paywall-badge.component.ng.scss
@@ -1,10 +1,11 @@
 @import 'defaults.scss';
 
 :host {
-  z-index: 1;
   cursor: default;
 
   .m-paywallBadge {
+    z-index: 3;
+    position: relative;
     display: inline-flex;
     align-items: center;
     border-radius: 3px;
@@ -12,7 +13,6 @@
     font-size: 12px;
     line-height: 12px;
     font-weight: 500;
-    z-index: 2;
     @include m-theme() {
       color: themed($m-white-always);
       background-color: themed($m-textColor--secondary);
