--- a/src/app/modules/channels/v2/feed/feed.component.html
+++ b/src/app/modules/channels/v2/feed/feed.component.html
@@ -1,4 +1,7 @@
-<div class="m-pageLayout__container m-channel__feed">
+<div
+  class="m-pageLayout__container m-channel__feed"
+  [ngClass]="{ 'm-channel__feed--grid': isGrid }"
+>
   <div class="m-channelFeed__body" m-pageLayout__pane="main">
     <!-- ----------------------------------------- -->
     <!-- TOOLBAR -->
