--- a/src/app/modules/newsfeed/activity/activity.component.scss
+++ b/src/app/modules/newsfeed/activity/activity.component.scss
@@ -1,4 +1,5 @@
 $activity-padding-lr: 21px;
+$activity-padding-lr--minimalMode: 16px;
 
 m-activity {
   display: block;
@@ -9,6 +10,10 @@ m-activity {
   &.m-border {
     border-radius: $m-borderRadius;
     box-shadow: 0 $m-boxShadowOffset $m-boxShadowBlur rgba(0, 0, 0, 0.05);
+  }
+
+  &.m-activity--minimalMode {
+    box-shadow: none;
   }
 
   @include m-theme() {
