--- a/src/app/modules/newsfeed/activity/minimal-metrics/minimal-metrics.component.html
+++ b/src/app/modules/newsfeed/activity/minimal-metrics/minimal-metrics.component.html
@@ -1,7 +1,9 @@
 <div
   class="m-activity__minimalMetrics"
   *ngIf="entity"
-  [ngClass]="{ addTopSpacing: addTopSpacing }"
+  [ngClass]="{
+    addTopSpacing: addTopSpacing || (service.shouldShowPaywall$ | async)
+  }"
 >
   <span class="m-activityMinimalMetrics__views" *ngIf="views$ | async as views"
     >{{ views | abbr }} views</span
