--- a/src/app/modules/wire/lock-screen/wire-lock-screen.component.scss
+++ b/src/app/modules/wire/lock-screen/wire-lock-screen.component.scss
@@ -23,15 +23,26 @@ m-wire--lock-screen.m-wire--lock-screen-2020 {
     > * {
       z-index: 1;
     }
+
+    &.m-wire__lockScreen--minimalMode {
+      .m-wireLockScreen__message {
+        display: none;
+      }
+    }
     &.isTextOnly {
       align-items: center;
 
       @include m-theme() {
         color: themed($m-textColor--secondary);
-        border-top: 1px solid themed($m-borderColor--tertiary);
         border-bottom: 1px solid themed($m-borderColor--tertiary);
         background-color: themed($m-white);
       }
+      &:not(.m-wire__lockScreen--minimalMode) {
+        @include m-theme() {
+          border-top: 1px solid themed($m-borderColor--tertiary);
+        }
+      }
+
       .m-wireLockScreen__message {
         @include m-theme() {
           text-shadow: 0 0 0 rgba(themed($m-black-always), 0);
