--- a/src/app/modules/modals/share/share.scss
+++ b/src/app/modules/modals/share/share.scss
@@ -14,6 +14,8 @@
   }
 
   .m-share__copyableLinkContainer {
+    margin-bottom: 16px;
+
     .m-share__copyableLink {
       margin-bottom: 0;
       border-radius: 18px;
@@ -188,5 +190,7 @@
     text-align: justify;
     overflow: hidden;
     border-radius: 3px;
+    resize: none;
+    margin-top: 4px;
   }
 }
