--- a/src/app/modules/media/components/video-player/player.component.scss
+++ b/src/app/modules/media/components/video-player/player.component.scss
@@ -14,17 +14,10 @@
   z-index: 1;
   width: 100%;
   box-sizing: border-box;
-
-  @include m-theme() {
-    color: themed($m-white);
-    @include m-theme() {
-      background: linear-gradient(
-        rgba(themed($m-black-always), 0.5),
-        rgba(themed($m-black-always), 0)
-      );
-      color: themed($m-white-always);
-    }
-  }
+  // We don't use theme here because this component is used in
+  // Embed mode and theming is not available there
+  background: linear-gradient(rgba(#000, 0.5), rgba(#000, 0));
+  color: #fff;
 }
 
 m-videoPlayer,
@@ -37,29 +30,25 @@ m-videoPlayer--scrollaware {
 .m-videoPlayer__placeholder {
   min-height: 330px;
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
   background-color: #222;
   position: relative;
-  i {
+
+  img {
     opacity: 0.8;
-    display: block;
-    text-align: center;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 100px;
-    position: absolute;
     cursor: pointer;
-    width: 100%;
     transition: opacity 0.3s cubic-bezier(0.23, 1, 0.32, 1);
-    @include m-theme() {
-      color: themed($m-white-always);
-      text-shadow: 0 0 3px rgba(themed($m-black-always), 0.6);
-    }
+    width: 60px;
+    height: 60px;
   }
+
   &:hover {
-    i {
+    img {
       opacity: 1;
     }
   }
