--- a/src/app/modules/embed/embed.html
+++ b/src/app/modules/embed/embed.html
@@ -26,7 +26,7 @@
     />
     <title>Minds Embed</title>
   </head>
-  <body style="margin: 0">
+  <body style="margin: 0; overflow: hidden;">
     <m-app></m-app>
 
     <script>
