--- a/src/app/modules/media/components/video-player/player.component.html
+++ b/src/app/modules/media/components/video-player/player.component.html
@@ -19,6 +19,8 @@
       [plyrSources]="!service.playable ? emptySource : (sources$ | async)"
       [plyrOptions]="options"
       (plyrPlay)="onPlayed($event)"
+      (plyrControlsShown)="onControlsShown.next()"
+      (plyrControlsHidden)="onControlsHidden.next()"
       (plyrEnterFullScreen)="fullScreenChange.next($event)"
       (plyrExitFullScreen)="fullScreenChange.next($event)"
       (plyrLoadedMetadata)="emitDimensions($event)"
