Apply 1 suggestion(s) to 1 file(s)

--- a/src/app/modules/modals/share/share.scss
+++ b/src/app/modules/modals/share/share.scss
@@ -186,7 +186,7 @@
   }
 
   .m-share__embedTextArea {
-    font-family: 'Liberation Mono', monospace;
+    font-family: Consolas, Menlo, Courier, monospace
     text-align: justify;
     overflow: hidden;
     border-radius: 3px;
