--- a/src/app/modules/newsfeed/activity/content/content.component.scss
+++ b/src/app/modules/newsfeed/activity/content/content.component.scss
@@ -327,4 +327,7 @@ m-activity__content {
   .m-activityContent--paywalledStatus {
     padding-top: 30px;
   }
+  .m-videoPlayer__placeholder i {
+    font-size: 70px;
+  }
 }
