--- a/src/app/modules/modals/share/share.scss
+++ b/src/app/modules/modals/share/share.scss
@@ -186,7 +186,7 @@
   }
 
   .m-share__embedTextArea {
-    font-family: Consolas, Menlo, Courier, monospace
+    font-family: Consolas, Menlo, Courier, monospace;
     text-align: justify;
     overflow: hidden;
     border-radius: 3px;
