--- a/src/app/common/components/autocomplete/text-input-autocomplete-menu.component.scss
+++ b/src/app/common/components/autocomplete/text-input-autocomplete-menu.component.scss
@@ -3,5 +3,6 @@ m-text-input--autocomplete-menu {
     display: block;
     max-height: 200px;
     overflow-y: auto;
+    @include z-index(modal);
   }
 }
