add 24-hour text to scheduler label

--- a/src/app/modules/composer/components/popup/schedule/schedule.component.html
+++ b/src/app/modules/composer/components/popup/schedule/schedule.component.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="m-composerPopup__field">
-          <label i18n="@@COMMON__TIME">Time</label>
+          <label i18n="@@COMMON__TIME">Time (24-hour)</label>
           <input
             type="text"
             [ngModel]="state.time"
