--- a/src/app/modules/channels/v2/channel.component.ng.scss
+++ b/src/app/modules/channels/v2/channel.component.ng.scss
@@ -9,6 +9,7 @@
     display: block;
     min-height: 100%;
     border-right: 1px solid;
+    position: relative;
 
     @media screen and (max-width: $max-mobile) {
       border: none;
