--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -1,3 +1,4 @@
+<m-emailConfirmation></m-emailConfirmation>
 <ng-container [m-clientMeta]="{ source: 'feed/subscribed', medium: 'feed' }">
   <div
     class="m-border mdl-color--green mdl-color-text--white m-newsfeed-boost-promo"
