Boost refund showing default

--- a/src/app/modules/wallet/v2/components/transactions-table/transactions-table.component.html
+++ b/src/app/modules/wallet/v2/components/transactions-table/transactions-table.component.html
@@ -38,6 +38,15 @@
               </div>
             </ng-template>
 
+            <ng-template ngSwitchCase="boost_refund">
+              <div class="m-walletTransactionsTable__typeWrapper--boost">
+                <i class="material-icons">trending_up</i
+                ><span i18n="@@WALLETV2_TX_TABLE__BOOST_REFUND"
+                  >Boost Refund</span
+                >
+              </div>
+            </ng-template>
+
             <!-- PURCHASES -->
             <ng-template ngSwitchCase="purchase">
               <div class="m-walletTransactionsTable__typeWrapper--purchase">
