Fix plyr font issue

--- a/src/app/modules/embed/embed.html
+++ b/src/app/modules/embed/embed.html
@@ -25,8 +25,18 @@
       href="assets/logos/bulb-16x16.png"
     />
     <title>Minds Embed</title>
+    <style>
+      :root {
+        --plyr-font-family: 'Roboto', Helvetica, sans-serif;
+      }
+
+      body {
+        margin: 0;
+        overflow: hidden;
+      }
+    </style>
   </head>
-  <body style="margin: 0; overflow: hidden;">
+  <body>
     <m-app></m-app>
 
     <script>
