Update themed color reference from 'contrast' to 'quinary'

--- a/src/app/modules/newsfeed/activity/owner-block/owner-block.component.scss
+++ b/src/app/modules/newsfeed/activity/owner-block/owner-block.component.scss
@@ -30,7 +30,7 @@ m-activity__ownerBlock {
         height: 17px;
         width: 17px;
         @include m-theme() {
-          background-color: themed($m-bgColor--contrast);
+          background-color: themed($m-bgColor--quinary);
         }
         i {
           font-weight: 700;
