Fix unsafe styling

--- a/src/app/modules/embed/embedded-video/embedded-video.component.html
+++ b/src/app/modules/embed/embedded-video/embedded-video.component.html
@@ -3,6 +3,7 @@
   [guid]="guid"
   [autoplay]="autoplay"
   [shouldPlayInModal]="false"
+  [embedded]="true"
   (onControlsShown)="onControlsShown()"
   (onControlsHidden)="onControlsHidden()"
 ></m-videoPlayer>
