--- a/src/app/modules/wire/v2/creator/form/form.component.ng.scss
+++ b/src/app/modules/wire/v2/creator/form/form.component.ng.scss
@@ -164,6 +164,13 @@
     }
   }
 
+  .m-wireCreatorForm__upgradeTrialHeader {
+    margin: 0;
+    padding: 0;
+    font-weight: 700;
+    font-size: 22px;
+  }
+
   .m-wireCreatorForm__intervalToggleContainer {
     display: flex;
     flex-direction: row;
