--- a/src/app/modules/wire/v2/creator/marketing-block/marketing-block.component.ng.scss
+++ b/src/app/modules/wire/v2/creator/marketing-block/marketing-block.component.ng.scss
@@ -5,7 +5,7 @@
     display: flex;
     align-items: flex-end;
     width: 100%;
-    height: 300px;
+    height: 220px; // 220px is ideal height for standard 13 inch screens
     user-select: none;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
