--- a/src/app/modules/payments/new-card/new-card.component.html
+++ b/src/app/modules/payments/new-card/new-card.component.html
@@ -1,10 +1,4 @@
 <m-loadingSpinner [inProgress]="!intentKey"></m-loadingSpinner>
 
-<iframe
-  [src]="url"
-  #iframe
-  *ngIf="intentKey"
-  allowtransparency="true"
-  style="height: 152px"
->
+<iframe [src]="url" #iframe *ngIf="intentKey" allowtransparency="true">
 </iframe>
